styles/fix: resolve permanent hover on mobile

--- a/plugin/components/AdditionalOptions/ChangeAvatar/change-avatar.scss
+++ b/plugin/components/AdditionalOptions/ChangeAvatar/change-avatar.scss
@@ -94,7 +94,12 @@ $bg-color: #9c9c9c;
         border-radius: 20px;
         transform: none;
         content: "Trocar avatar";
+
+        @media (max-width: 450px) {
+          display: none !important;
+        }
       }
+
     }
 
     .active {
@@ -134,4 +139,5 @@ $bg-color: #9c9c9c;
       top: 32px;
     }
   }
+
 }
